add styles for FORM-ADD-PRODUCT - agregar_producto.html

--- a/assets/private/agregar_empleado.html
+++ b/assets/private/agregar_empleado.html
@@ -96,6 +96,36 @@
       </aside>
 
       <!-- ! ========== MAIN ========== -->
+
+      <!-- TODO: datos formulario
+        --- Identificación personal
+        - Nombre
+        - Nombre 2
+        - Apellido 1
+        - Apellido 2
+        - Fecha Nacimiento
+        - Nacionalidad
+        - RUT
+        - Genero
+        - Estado civil
+        --- Datos de contacto
+        - Dirección
+        - Ciudad/Comuna
+        - Numero Teléfono
+        - Numero Teléfono Emergencia
+        - Email
+        --- Datos laborales
+        - Cargo/Posición
+        - Fecha de Contratación
+        - Fecha de Finalización (opcional)
+        - Tipo de salario
+        - Salario
+        --- Datos de seguridad y acceso
+        - Usuario
+        - Contraseña
+        - Definir ROL (lo debe hacer el ADMIN)
+  -->
+
       <main class="main">
         <h2>Agregar Usuario:</h2>
         <!--Para cuadros de texto label-->
