--- a/assets/public/agregar_producto.html
+++ b/assets/public/agregar_producto.html
@@ -4,20 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- ! Icons -->
-    <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/fontawesome.min.css"
-      integrity="sha512-B46MVOJpI6RBsdcU307elYeStF2JKT87SsHZfRSkjVi4/iZ3912zXi45X5/CBr/GbCyLx6M1GQtTKYRd52Jxgw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
-
-    <!-- ! Google Fonts -->
+    <!-- ----------- GOOGLE FONTS ----------- -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet" />
 
-    <!-- ! CSS -->
+    <!-- ----------- CSS ----------- -->
     <link rel="stylesheet" href="../css/style.css" />
     <title>Agregar Producto| Piezas de Mi Mami</title>
   </head>
@@ -37,7 +24,7 @@
 
       <header class="header--section">
         <div class="header--link--box">
-          <a class="center--row" href="../../index.html">
+          <a class="center--row gap--4" href="../../index.html">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="48"
@@ -52,7 +39,7 @@
           </a>
         </div>
         <div class="header--user--box">
-          <a class="center--row" href="../public/modificar_empleado.html">
+          <a class="center--row gap--4" href="../public/modificar_empleado.html">
             <p>Admin</p>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -77,6 +64,7 @@
       <!-- ----------- SIDEBAR ----------- -->
 
       <aside class="sidebar--section">
+        <hr />
         <search class="search container--row">
           <input class="search--bar" placeholder="Leche ..." autocomplete="off" type="text" />
           <div class="search--icon">
@@ -107,12 +95,14 @@
           <div class="search--result"></div>
         </search>
 
+        <hr />
+
         <!-- ----------- NAVBAR ----------- -->
 
         <nav class="nav--main">
           <ul class="nav--main--list">
             <li>
-              <a class="nav--main--link center--row" href="#">
+              <a class="nav--main--link center--row gap--4" href="#">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -129,7 +119,7 @@
               </a>
             </li>
             <li>
-              <a class="nav--main--link center--row" href="#">
+              <a class="nav--main--link center--row gap--4" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                   <path
                     fill="currentColor"
@@ -139,7 +129,7 @@
               </a>
             </li>
             <li>
-              <a class="nav--main--link center--row" href="#">
+              <a class="nav--main--link center--row gap--4" href="#">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -163,12 +153,14 @@
         <header>
           <h1 class="title">Agregar Producto</h1>
         </header>
-        <form class="form--add--product" method="post">
-          <div class="form_agregar grid grid--2--cols">
-            <label for="product-name">Nombre del producto:</label>
-            <input id="product-name" type="text" name="product_name" />
-            <label for="product_department">Departamento:</label>
-            <select id="product-department" name="product_department">
+        <form class="form--add--product grid grid--4--cols gap--4" method="post">
+          <div class="input--box">
+            <label for="product-name" class="form--label">Nombre del producto</label>
+            <input id="product-name" class="form--input" type="text" name="product_name" />
+          </div>
+          <div class="input--box">
+            <label for="product_department" class="form--label">Departamento</label>
+            <select id="product-department" class="form--input" name="product_department">
               <option value="0">Seleccionar departamento...</option>
               <option value="Abarrotes">Abarrotes</option>
               <option value="Lácteos">Lácteos</option>
@@ -178,16 +170,20 @@
               <option value="Congelados">Congelados</option>
               <option value="Producto de limpieza">Producto de limpieza</option>
             </select>
-            <label for="product-type-sale"> Tipo de venta: </label>
-            <select id="product-type-sale" name="product_type_sale">
+          </div>
+          <div class="input--box">
+            <label for="product-type-sale" class="form--label">Tipo de venta</label>
+            <select id="product-type-sale" class="form--input" name="product_type_sale">
               <option value="0">Seleccionar tipo de venta...</option>
               <option value="1">Gramos (g)</option>
               <option value="2">Kilos (kg)</option>
               <option value="3">Unidad (u)</option>
               <option value="4">Litros (lt)</option>
             </select>
-            <label for="product-brand">Marca:</label>
-            <select id="product-brand" name="product_brand">
+          </div>
+          <div class="input--box">
+            <label for="product-brand" class="form--label">Marca:</label>
+            <select id="product-brand" class="form--input" name="product_brand">
               <option value="0">Tipo de marca ...</option>
               <option value="Coca-Cola">Coca-Cola</option>
               <option value="Colun">Colun</option>
@@ -195,18 +191,34 @@
               <option value="Soprole">Soprole</option>
               <option value="Tucapel">Tucapel</option>
             </select>
-            <label for="product-sale">Precio de venta:</label>
-            <input id="product-sale" type="number" name="product_sale" />
-            <label for="product-cost">Costo del producto:</label>
-            <input id="product-cost" type="number" name="product_cost" />
-            <label for="product-amount">Cantidad:</label>
-            <input id="product-amount" type="number" name="product_amount" />
-            <label for="product-min-amount">Cantidad minima:</label>
-            <input id="product-min-amount" type="number" name="product_min_amount" />
+          </div>
+          <div class="input--box">
+            <label for="product-sale" class="form--label">Precio de venta</label>
+            <input id="product-sale" class="form--input" type="number" name="product_sale" />
+          </div>
+          <div class="input--box">
+            <label for="product-cost" class="form--label">Costo del producto</label>
+            <input id="product-cost" class="form--input" type="number" name="product_cost" />
+          </div>
+          <div class="input--box">
+            <label for="product-amount" class="form--label">Cantidad</label>
+            <input id="product-amount" class="form--input" type="number" name="product_amount" />
+          </div>
+          <div class="input--box">
+            <label for="product-min-amount" class="form--label">Cantidad minima</label>
+            <input
+              id="product-min-amount"
+              class="form--input"
+              type="number"
+              name="product_min_amount" />
+          </div>
+          <div class="input--box">
             <!-- TODO: agregar icono para limipiar -->
-            <input type="reset" value="Limpiar" />
+            <input type="reset" class="btn btn--full" value="Limpiar" />
+          </div>
+          <div class="input--box">
             <!-- TODO: agregar icono para agregar usuario -->
-            <button class="btn--agr--product">Agregar</button>
+            <button class="btn btn--full btn--agr--product">Agregar</button>
           </div>
         </form>
       </main>
